// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Get formatted form data get data but no field input 1`] = `
Object {
  "Nested Repeated Double Field": Array [
    Object {
      "Nested Double Field": Object {},
    },
    Object {
      "Nested Double Field": Object {},
    },
  ],
}
`;

exports[`Get formatted form data get nested int 1`] = `
Object {
  "Nested Int Field": Object {
    "Int Field": 123456,
  },
}
`;

exports[`Get formatted form data get non-repeated int 1`] = `
Object {
  "Int Field": 123456,
}
`;

exports[`Get formatted form data get non-typed POST 1`] = `"Alpha"`;

exports[`Get formatted form data get repeated double 1`] = `
Object {
  "Repeated Double Field": Array [
    -123.456,
    456.789,
  ],
}
`;

exports[`Get formatted form data get repeated nested int 1`] = `
Object {
  "Repeated Nested Int Field": Array [
    Object {
      "Nested Int Field": Object {
        "Int Field": -123456,
      },
    },
    Object {
      "Nested Int Field": Object {
        "Int Field": 456789,
      },
    },
  ],
}
`;

exports[`Get formatted form data get repeated nested repeated double 1`] = `
Object {
  "Nested Repeated Double Field": Array [
    Object {
      "Nested Double Field": Object {
        "Repeated Double Field": Array [
          -123.456,
        ],
      },
    },
    Object {
      "Nested Double Field": Object {
        "Repeated Double Field": Array [
          456.789,
          -789.123,
        ],
      },
    },
  ],
}
`;
